--- a/style.css
+++ b/style.css
@@ -1,17 +1,71 @@
 
 
+
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#anchor_1 {
+    anchor-name: --anchor_1;
+}
+
+#anchor_2 {
+    anchor-name: --anchor_2;
+}
+
+
+[popover] {
+    margin: 0;
+
+}
+
+[popover-sc] {
+    margin: 0;
+}
+
+
+.grid-container-normal{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    margin: auto;
+    text-align: center;
+}
+.grid-container-modificado{
+    display: grid;
+    grid-template-columns: auto;
+    margin: auto;
+    text-align: center;
+}
+
+.grid-item{
+    padding: 40px;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+product-card{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+product-card:hover´{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 .img{
     width: 300px;
     height: auto;
 }
 
-.grid-container{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
-    margin: auto;
+.title{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: xx-large;
 }
 
-.grid-item{
-
+.price{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
